fix scrollbar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -220,7 +220,7 @@ a {
 }
 
 .chatcontainer {
-	overflow: scroll;
+	overflow-y: auto;
 	max-height: calc (100vh - 150px);
 }
 
